# toy-robot

./: .gitignore  CMakeLists.txt  README.md  main.cpp
application_test/: expected_output.txt  input_commands.txt
lib/: Controller.cpp  Controller.h  Direction.h  Robot.cpp  Robot.h  RobotInterface.h  Table.cpp  Table.h
lib/unit_test/: ControllerTest.cpp  RobotTest.cpp  TableTest.cpp
